# bec-projection-operator

./: .gitignore  ARCHITECTURE.md  CITATION.cff  FRAMEWORK_SUMMARY.md  LICENSE  MANUAL_WALKTHROUGH.md  MATHEMATICAL_FOUNDATIONS.md  PHI_INTEGRITY_MATHEMATICS.md  README.md  THEORY.md  audit_service.py  class_planck2018_TTTEEE_lowE_linear_z0.ini  erving absorbing boundaries  phase40_perturbation_response.py  phase41_scale_depth_separability.py  phase42_observable_mapping.py  phase43_supercritical_transition.py  phase43b_parametric_inference.py  phase45_theoretical_embedding.md  phase46_emergent_gravity.md  pyproject.toml  requirements.txt  run_v9_bec_fsigma8_check.py  run_v9_bec_joint_mcmc.py  run_v9_bec_mcmc.py  test_v9_bec_crust.py
analysis/: extract_casec_metrics.py  phase6_extract_metrics.py  phase8a_sweep.sh  phase8b_sweep.sh  phase8b_watch_log.py
audit_logs/: audit_report_496b9d342d031200.json  audit_report_a5a1151b88033cae.json
bec-phi-compressor/: README_COMPRESSOR.md  RESULTS.md  create_test_data.py  pyproject.toml
bec-phi-compressor/bec_phi_compress/: __init__.py  cli.py  compressor.py  decompressor.py  projection.py
bec-phi-compressor/tests/: test_compression.py
bec_phi_kernel/: README.md  __init__.py  cli.py  requirements.txt
class_v9_bec_patches/: APPLY_PATCHES.md  background.c  background.h  input.c
data/: PROVENANCE_matter_power_linear_z0.txt  matter_power_linear_z0.txt  phase10e_tomography.npz  planck2018_linear_z0.ini
docs/: BOUTPP_CLOSEOUT.md  CONTINUITY_LOCK_MAP_AND_DENSITY_SANDWICH_2026-01-27.md  FINAL_MATHEMATICAL_CLOSURE.md  GITHUB_REVIEW_2026-01-26.md  INTERFACE_CLOSURE_STEPS_1_TO_4_2026-01-27.md  LADDER_RUNG1_TO_RUNG16_CLOSURE.md  PHASE4_GITHUB_ISSUE.md  PHASE4_IMPLEMENTATION_CHECKLIST.md  PR_BODY_boutpp_closeout.md  README_HANDOFF.md  RUNG3_SANDWICH_AND_RUNG4_BOUNDING_2026-01-26.md  SBIR_Appendix_Inertia_Validation.md  SESSION_HANDOFF.md  STEP4_INTERFACE_CONSTRAINT_REWRITE_2026-01-28.md  WINDSURF_EXECUTION_BRIEF_RUNG17_INTERFACE_2026-01-27.md  determinism_contract.md  interface_math.md  phase8.md  scope.md
examples/: __init__.py  accounting_demo.py  alfven_1d.py  dedalus_alfven_1d.py  dedalus_alfven_1d_linetied.py  dedalus_alfven_1d_linetied_evp.py  dedalus_alfven_1d_linetied_evp2.py  dedalus_alfven_2d_anisotropic_evp.py  dedalus_alfven_2d_coupled_evp.py  dedalus_alfven_2d_coupled_ivp.py  dedalus_alfven_2d_nl_ivp.py  dedalus_alfven_2d_nl_ivp.py.bak.20522  dedalus_alfven_2d_slab_evp.py  dedalus_alfven_2d_slab_ivp.py  dedalus_alfven_linear_periodic.py  dedalus_alfven_linear_weak.py  dedalus_anisotropic_alfven_1d.py  phase6_skew_test.py
execution/: run_cpu.py  run_gpu.py  validate_parity.py
governance/: __init__.py  guard.py
interface/: __init__.py  determinism.py  ladder.py  phi.py  response.py
logs/: phi_integrity_0dda76b046aa5aa5.json  phi_integrity_1c818cecf775e10c.json  phi_integrity_1cdbf7acfafd8e55.json  phi_integrity_1fac4dd7a4fc4b7b.json  phi_integrity_27ac4c20f1b521d1.json  phi_integrity_31c64623e5484746.json  phi_integrity_32af08ba4744b5f1.json  phi_integrity_48bec5de0bde6d80.json  phi_integrity_554510ca806ac086.json  phi_integrity_6280ec46ef2ed7ca.json  phi_integrity_645723dec1e71778.json  phi_integrity_8683322d1a16e2f8.json  phi_integrity_891ca0152cc2fc16.json  phi_integrity_8da0b763eba59d77.json  (+13 more)
(+152 files in other folders)
